# Photon

./: .gitignore  CMakeLists.txt  CMakePresets.json  Photon.code-workspace  README.md  RunDockerCompose.sh  docker-compose.yml
Client/: ApiCore.cpp  ApiCore.h  CMakeLists.txt  CMakePresets.json  ContentList.cpp  ContentList.h  ContentView.cpp  ContentView.h  LoginDialog.cpp  LoginDialog.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
Client/Application/: CMakeLists.txt  ContentView.cpp  ContentView.h  LoginDialog.h  MainWindow.cpp  MainWindow.h
Client/Objects/: CMakeLists.txt
Client/Objects/ApiCore/: ApiCore.cpp  CMakeLists.txt
Client/Objects/ApiCore/ApiCore/: ApiCore.h
Client/Tests/TestClient/: ApiCoreTest.h
Client/Tests/TestService/: ToDoApp.postman_collection.json
Objects/ApiCore/: ApiCore.cpp  CMakeLists.txt
Objects/ApiCore/ApiCore/: ApiCore.h
Scripts/: HelloWorld.py
Server/: Cargo.toml  Dockerfile  Note.txt
Server/apiservice/: Cargo.toml  fastdev.ipynb
Server/apiservice/scripts/: database.vuerd.json  fastdev.ipynb
Server/apiservice/src/: connection_mongodb.rs  main.rs  routes.rs
Server/apiservice/src/routes/: folders.rs  main.rs  modules.rs  users.rs
Service/: Dockerfile  package.json
Service/Source/: App.js
Service/Source/Models/: ModelCollection.js  ModelItem.js  ModelUser.js
Service/Source/Routes/: Collections.js  Items.js  RouteAuth.js  RouteCollections.js  RouteIndex.js  RouteUsers.js
Tests/TestClient/: ApiCoreTest.cpp  CMakeLists.txt
