[package]
name = "apiservice"
version = "0.1.0"
edition = "2021"

[features]
default = ["async-std-rt"]
async-std-rt = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-rt = ["tokio", "sqlx/runtime-tokio-native-tls"]

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
tokio = { version = "1.11.0", features = ["full"], optional = true }
sqlx = { version = "0.5.7", features = ["postgres", "uuid", "chrono", "json"] }
tide-sqlx = "0.6.1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }